CONFUSED: パスに関するバグ修正とコミュニティの追加を行うパスの追加 etc.
